implemented endpoint for adding subject to educational program
