# src/main/resources/openapi/university-scheduler.yaml
@@ -628,7 +628,83 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /educational-programs/{id}/subjects:
+    get:
+      summary: Get all subjects of educational program
+      operationId: findAllSubjects
+      tags:
+        - EducationalProgramz
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EducationalProgramExtendedInfo'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
+  /educational-programs/{id}/subjects/{subjectId}:
+    put:
+      summary: Add subject to educational program
+      operationId: addSubject
+      tags:
+        - EducationalProgramz
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - name: subjectId
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SubjectInfo'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 components:
   parameters:
     pageParams:
@@ -712,6 +788,24 @@ components:
         universityId:
           type: string
           format: uuid
+
+    EducationalProgramExtendedInfo:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        title:
+          type: string
+        elective:
+          type: boolean
+        universityId:
+          type: string
+          format: uuid
+        subjects:
+          type: array
+          items:
+            $ref: '#/components/schemas/SubjectInfo'
 
     AuthRequest:
       type: object
